# crewai

./: README.md  app.py  content_agents.py  content_crew.py  content_tasks.py  pyproject.toml  report.md
src/countent_creator/: crew.py  main.py
